tests/semantic/valid/test_type_compat.src
fn compute(int a, float b) : float {
    float result = a + b;
    return result;
}
