tests/semantic/invalid/test_arg_type.src
fn greet(bool flag) : void {
    return;
}

fn main() : void {
    greet(42);
}
